[package]
name = "spotify_streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
request-http-parser = "0.1.2"
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
uuid = {version = "1.17.0", features = ["v4"]}
percent-encoding = "2.3.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
